module(name = "slack_resource_sample")

MAVEN_ARTIFACTS = [
    "androidx.activity:activity-compose:1.9.0",
    "androidx.activity:activity-ktx:1.9.0",
    "androidx.activity:activity:1.9.0",
    "androidx.annotation:annotation:1.8.0-rc01",
    "androidx.appcompat:appcompat-resources:1.7.0-beta01",
    "androidx.appcompat:appcompat:1.7.0-beta01",
    "androidx.biometric:biometric:1.2.0-alpha05",
    "androidx.browser:browser:1.8.0",
    "androidx.camera:camera-camera2:1.4.0-alpha05",
    "androidx.camera:camera-extensions:1.4.0-alpha05",
    "androidx.camera:camera-lifecycle:1.4.0-alpha05",
    "androidx.camera:camera-video:1.4.0-alpha05",
    "androidx.camera:camera-view:1.4.0-alpha05",
    "androidx.cardview:cardview:1.0.0",
    "androidx.collection:collection:1.4.0",
    "androidx.compose.animation:animation-graphics-android:1.7.0-alpha08",
    "androidx.compose.animation:animation:1.7.0-alpha08",
    "androidx.compose.compiler:compiler:1.5.13",
    "androidx.compose.foundation:foundation:1.7.0-alpha08",
    "androidx.compose.material3:material3-window-size-class:1.3.0-alpha06",
    "androidx.compose.material3:material3:1.3.0-alpha06",
    "androidx.compose.runtime:runtime-rxjava3:1.7.0-alpha08",
    "androidx.compose.runtime:runtime:1.7.0-alpha08",
    "androidx.compose.runtime:runtime-livedata:1.7.0-alpha08",
    "androidx.compose.ui:ui-graphics:1.7.0-alpha08",
    "androidx.compose.ui:ui-text-google-fonts:1.7.0-alpha08",
    "androidx.compose.ui:ui-text:1.7.0-alpha08",
    "androidx.compose.ui:ui-tooling-data:1.7.0-alpha08",
    "androidx.compose.ui:ui-tooling-preview:1.7.0-alpha08",
    "androidx.compose.ui:ui-tooling:1.7.0-alpha08",
    "androidx.compose.ui:ui-unit:1.7.0-alpha08",
    "androidx.compose.ui:ui-viewbinding:1.7.0-alpha08",
    "androidx.compose.ui:ui:1.7.0-alpha08",
    "androidx.concurrent:concurrent-futures-ktx:1.2.0-alpha03",
    "androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha13",
    "androidx.constraintlayout:constraintlayout:2.2.0-alpha13",
    "androidx.coordinatorlayout:coordinatorlayout:1.3.0-alpha02",
    "androidx.core:core-ktx:1.13.1",
    "androidx.core:core:1.13.1",
    "androidx.customview:customview-poolingcontainer:1.0.0",
    "androidx.databinding:viewbinding:8.4.0",
    "androidx.datastore:datastore-core:1.1.1",
    "androidx.datastore:datastore-preferences-core:1.1.1",
    "androidx.datastore:datastore-preferences:1.1.1",
    "androidx.emoji2:emoji2:1.5.0-alpha01",
    "androidx.exifinterface:exifinterface:1.3.7",
    "androidx.fragment:fragment-compose:1.8.0-alpha02",
    "androidx.fragment:fragment-ktx:1.8.0-alpha02",
    "androidx.fragment:fragment:1.8.0-alpha02",
    "androidx.interpolator:interpolator:1.0.0",
    "androidx.lifecycle:lifecycle-common:2.7.0",
    "androidx.lifecycle:lifecycle-livedata-ktx:2.7.0",
    "androidx.lifecycle:lifecycle-process:2.7.0",
    "androidx.lifecycle:lifecycle-runtime-compose:2.7.0",
    "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0",
    "androidx.lifecycle:lifecycle-runtime:2.7.0",
    "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0",
    "androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0",
    "androidx.lifecycle:lifecycle-viewmodel:2.7.0",
    "androidx.loader:loader:1.1.0",
    "androidx.paging:paging-compose:3.3.0-rc01",
    "androidx.paging:paging-runtime-ktx:3.3.0-rc01",
    "androidx.paging:paging-runtime:3.3.0-rc01",
    "androidx.paging:paging-rxjava3:3.3.0-rc01",
    "androidx.palette:palette:1.0.0",
    "androidx.profileinstaller:profileinstaller:1.4.0-alpha01",
    "androidx.recyclerview:recyclerview:1.4.0-alpha01",
    "androidx.security:security-crypto:1.1.0-alpha06",
    "androidx.sqlite:sqlite-framework:2.4.0",
    "androidx.sqlite:sqlite-ktx:2.4.0",
    "androidx.sqlite:sqlite:2.4.0",
    "androidx.startup:startup-runtime:1.2.0-alpha02",
    "androidx.swiperefreshlayout:swiperefreshlayout:1.2.0-alpha01",
    "androidx.test.espresso:espresso-idling-resource:3.5.1",
    "androidx.transition:transition:1.5.0-rc02",
    "androidx.viewpager2:viewpager2:1.1.0-beta02",
    "androidx.viewpager:viewpager:1.1.0-alpha01",
    "androidx.window:window:1.3.0-beta01",
    "androidx.work:work-runtime-ktx:2.10.0-alpha02",
    "androidx.work:work-runtime:2.10.0-alpha02",
    # Imported locally in third_party due to multiplatform/incorrect POM file setup
    # "app.cash.molecule:molecule-runtime:1.4.2",
    "app.cash.sqldelight:android-driver:aar:release:2.0.2",
    "app.cash.sqldelight:androidx-paging3-extensions-jvm:2.0.2",
    "app.cash.sqldelight:async-extensions-jvm:2.0.2",
    "app.cash.sqldelight:coroutines-extensions-jvm:2.0.2",
    "app.cash.sqldelight:primitive-adapters-jvm:2.0.2",
    "app.cash.sqldelight:runtime-jvm:2.0.2",
    "app.cash.sqldelight:rxjava3-extensions:2.0.2",
    "com.airbnb.android:lottie-compose:6.4.0",
    "com.airbnb.android:lottie:6.4.0",
    "com.android.installreferrer:installreferrer:2.2",
    "com.bugsnag:bugsnag-android:6.4.0",
    "com.davemorrissey.labs:subsampling-scale-image-view-androidx:3.10.0",
    "com.facebook.flipper:flipper-network-plugin:0.250.0",
    "com.facebook.flipper:flipper:0.250.0",
    "com.facebook.shimmer:shimmer:0.5.0",
    "com.facebook.soloader:soloader:0.11.0",
    "com.github.jinatonic.confetti:confetti:1.1.2",
    "com.google.accompanist:accompanist-drawablepainter:0.35.0-alpha",
    "com.google.android.exoplayer:exoplayer:2.18.7",
    "com.google.android.exoplayer:extension-mediasession:2.18.7",
    "com.google.android.exoplayer:extension-okhttp:2.18.7",
    "com.google.android.flexbox:flexbox:3.0.0",
    "com.google.android.gms:play-services-auth-api-phone:18.0.2",
    "com.google.android.gms:play-services-auth:21.1.1",
    "com.google.android.gms:play-services-mlkit-barcode-scanning:18.3.0",
    "com.google.android.material:material:1.13.0-alpha02",
    "com.google.android.play:core-ktx:1.8.1",
    "com.google.auto.service:auto-service-annotations:1.1.1",
    "com.google.auto.value:auto-value-annotations:1.10.4",
    "com.google.code.findbugs:jsr305:3.0.2",
    "com.google.code.gson:gson:2.10.1",
    "com.google.crypto.tink:tink-android:1.13.0",
    "com.google.dagger:dagger-compiler:2.51",
    "com.google.devtools.ksp:symbol-processing-api:1.9.23-1.0.20",
    "com.google.firebase:firebase-messaging:23.1.2",  # Must keep the old version to access the aar target
    "com.google.guava:guava:33.2.0-jre",
    "com.google.truth:truth:1.4.2",
    "com.jakewharton.rx3:replaying-share-kotlin:3.0.0",
    "com.jakewharton.rx3:replaying-share:3.0.0",
    "com.jakewharton.rxbinding4:rxbinding-appcompat:4.0.0",
    "com.jakewharton.rxbinding4:rxbinding:4.0.0",
    "com.jakewharton.rxrelay3:rxrelay:3.0.1",
    "com.jakewharton:process-phoenix:3.0.0",
    "com.linkedin.android.litr:litr:1.5.5",
    "com.mariten:kanatools:1.3.0",
    "com.slack.circuit:circuit-codegen-annotations-android:0.20.0",
    "com.slack.circuit:circuit-foundation-android:0.20.0",
    "com.slack.circuit:circuit-overlay-android:0.20.0",
    "com.slack.circuit:circuit-runtime-android:0.20.0",
    "com.slack.circuit:circuit-runtime-presenter-android:0.20.0",
    "com.slack.circuit:circuit-runtime-ui-android:0.20.0",
    "com.slack.circuit:circuitx-android:0.20.0",
    "com.slack.circuit:circuitx-effects-android:0.20.0",
    "com.slack.circuit:circuitx-overlays-android:0.20.0",
    "com.slack.circuit:circuit-codegen:0.20.0",
    "com.slack.circuit:circuitx-android:0.20.0",
    "com.slack.eithernet:eithernet:1.8.1",
    "com.slack.lint:slack-lint-annotations:0.7.1",
    "com.slack.moshi:gson-interop:0.4.3",
    # update to 2.5.0-beta09 breaks app-startup-di
    "com.squareup.anvil:annotations:2.5.0-beta07",
    "com.squareup.anvil:compiler:2.5.0-beta07",
    "com.squareup.leakcanary:leakcanary-android:2.14",
    "com.squareup.leakcanary:plumber-android:2.14",
    "com.squareup.leakcanary:shark:2.14",
    "com.squareup.moshi:moshi-adapters:1.15.1",
    "com.squareup.moshi:moshi:1.15.1",
    "com.squareup.okhttp3:okhttp-brotli:5.0.0-alpha.14",
    "com.squareup.okhttp3:okhttp:5.0.0-alpha.14",
    "com.squareup.okio:okio:3.9.0",
    "com.squareup.retrofit2:retrofit:2.11.0",
    "com.squareup.wire:wire-runtime:4.9.9",
    "com.squareup:kotlinpoet-ksp:1.16.0",
    "com.squareup:kotlinpoet-jvm:1.16.0",
    "com.uber.rxdogtag2:rxdogtag:2.0.2",
    "dev.chrisbanes.insetter:insetter:0.5.0",
    "dev.zacsweers.autoservice:auto-service-ksp:1.1.0",
    "dev.zacsweers.moshix:moshi-adapters:0.25.1",
    "dev.zacsweers.moshix:moshi-compiler-plugin:0.25.1",
    "dev.zacsweers.moshix:moshi-proguard-rule-gen:0.25.1",
    "dev.zacsweers.moshix:moshi-sealed-runtime:0.25.1",
    "dev.zacsweers.redacted:redacted-compiler-plugin-annotations-jvm:1.7.1",
    "dev.zacsweers.redacted:redacted-compiler-plugin:1.7.1",
    "io.coil-kt:coil-base:2.6.0",
    "io.coil-kt:coil-compose:2.6.0",
    "io.coil-kt:coil-gif:2.6.0",
    "io.coil-kt:coil-svg:2.6.0",
    "io.coil-kt:coil-video:2.6.0",
    "io.github.inflationx:viewpump:2.1.1",
    "io.reactivex.rxjava3:rxandroid:3.0.2",
    "io.reactivex.rxjava3:rxjava:3.1.8",
    "javax.inject:javax.inject:1",
    "org.jetbrains.kotlinx:kotlinx-collections-immutable-jvm:0.3.7",
    "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.8.0",
    "org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.8.0",
    "org.jetbrains.kotlinx:kotlinx-coroutines-rx3:1.8.0",
    "org.reactivestreams:reactive-streams:1.0.4",
    "org.threeten:threeten-extra:1.8.0",
    "software.aws.chimesdk:amazon-chime-sdk-media:0.20.0",
    "software.aws.chimesdk:amazon-chime-sdk:0.20.0",
]

# Only list dependencies here that are required to disambiguate transitive deps that are not already listed in the set above
FORCED_MAVEN_ARTIFACTS = [
    "androidx.compose.material:material-icons-core:1.6.0",
    "androidx.compose.material:material-ripple:1.7.0-alpha08",
    "org.jetbrains.compose.runtime:runtime:1.6.0",
]

bazel_dep(
    name = "rules_java",
    version = "7.5.0",
)

bazel_dep(
    name = "rules_jvm_external",
    version = "6.1",
)

bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)

bazel_dep(
    name = "buildifier_prebuilt",
    version = "6.4.0",
)

bazel_dep(
    name = "apple_support",
    version = "1.15.1",
    repo_name = "build_bazel_apple_support",
)

remote_android_extensions = use_extension("@bazel_tools//tools/android:android_extensions.bzl", "remote_android_tools_extensions")

use_repo(remote_android_extensions, "android_gmaven_r8")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven_slack",
    # This defaults to the old @io_bazel_rules_android, which is why it is overridden.
    aar_import_bzl_label = "@rules_android//android:rules.bzl",
    artifacts = MAVEN_ARTIFACTS + FORCED_MAVEN_ARTIFACTS +
    # TODO — these are hardcoded here until an Airin Feature can be written
    #        to add these as part of general Bazel automation
    [
        "com.squareup.wire:wire-runtime-jvm:4.9.9",
        "com.squareup.wire:wire-compiler:4.9.9",
    ],
    duplicate_version_warning = "error",
    fail_if_repin_required = False,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    use_credentials_from_home_netrc_file = True,
    use_starlark_android_rules = True,
    version_conflict_policy = "pinned",
)

use_repo(
    maven,
    "maven_slack",
    "unpinned_maven_slack",
)

apple_cc_configure = use_extension("@build_bazel_apple_support//crosstool:setup.bzl", "apple_cc_configure_extension")

use_repo(apple_cc_configure, "local_config_apple_cc")
