load("@rules_android//android:rules.bzl", "android_binary", "android_library")

#load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")
load("//bazel/macros:module.bzl", "kt_android_library")

android_binary(
    name = "debug",
    incremental_dexing = 1,
    manifest = "src/main/AndroidManifest.xml",
    multidex = "native",
    target_compatible_with = [
        "@platforms//cpu:arm64-v8a",
    ],
    deps = [
        ":lib",
        "//samples/resources/features/main-activity",
    ],
)

android_library(
    name = "lib",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
)
